@@ -1,108 +1,96 @@
 package com.backbase.ct.bbfuel.data;
 
-import static java.util.stream.Collectors.toList;
-
 import com.backbase.ct.bbfuel.dto.entitlement.JobProfile;
-import com.backbase.dbs.accesscontrol.accessgroup.integration.v3.model.FunctionGroupItem;
-import com.backbase.dbs.accesscontrol.accessgroup.integration.v3.model.FunctionGroupItem.TypeEnum;
-import com.backbase.dbs.accesscontrol.accessgroup.integration.v3.model.FunctionsGetResponseBody;
-import com.backbase.dbs.accesscontrol.accessgroup.integration.v3.model.IntegrationDataGroupCreate;
-import com.backbase.dbs.accesscontrol.accessgroup.integration.v3.model.IntegrationItemIdentifier;
-import com.backbase.dbs.accesscontrol.accessgroup.integration.v3.model.IntegrationPrivilege;
-import com.backbase.dbs.accesscontrol.accessgroup.integration.v3.model.Permission;
-import com.backbase.dbs.accesscontrol.accessgroup.integration.v3.model.Privilege;
+import com.backbase.dbs.accesscontrol.ac_data_group.integration.v1.model.DataGroupBatchIngest;
+import com.backbase.dbs.accesscontrol.ac_function_group.integration.v1.model.FunctionGroupIngest;
+import com.backbase.dbs.accesscontrol.ac_function_group.integration.v1.model.FunctionGroupIngest.TypeEnum;
+import com.backbase.dbs.accesscontrol.ac_function_group.integration.v1.model.Permission;
+import com.backbase.dbs.accesscontrol.ac_permission_set.integration.v1.model.PermissionItem;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 public class AccessGroupsDataGenerator {
 
-    public static FunctionGroupItem generateFunctionGroupPostRequestBody(String externalServiceAgreementId,
+    public static FunctionGroupIngest generateFunctionGroupPostRequestBody(String externalServiceAgreementId,
         String functionGroupName, String functionGroupType, List<Permission> permissions) {
-        return new FunctionGroupItem()
+        return new FunctionGroupIngest()
             .name(functionGroupName)
             .description(functionGroupName)
-            .type(TypeEnum.fromValue(functionGroupType))
+            .type(getType(functionGroupType))
             .externalServiceAgreementId(externalServiceAgreementId)
             .permissions(permissions);
     }
 
-    public static IntegrationDataGroupCreate generateDataGroupPostRequestBody(String externalServiceAgreementId,
-        String dataGroupName, String type, List<String> items) {
-        List<IntegrationItemIdentifier> dataItems = new ArrayList();
-        items.forEach(item -> dataItems.add(new IntegrationItemIdentifier().internalIdIdentifier(item)));
+    private static TypeEnum getType(String functionGroupType) {
+        return switch (functionGroupType) {
+            case "REGULAR", "CUSTOM" -> TypeEnum.CUSTOM;
+            case "TEMPLATE", "REFERENCE" -> TypeEnum.REFERENCE;
+            default -> throw new IllegalArgumentException("Unknown function group type: " + functionGroupType);
+        };
+    }
 
-        return new IntegrationDataGroupCreate()
-            .name(dataGroupName)
+    public static List<DataGroupBatchIngest> generateDataGroupPostRequestBody(String externalServiceAgreementId,
+        String dataGroupName, String type, Set<String> items) {
+        return List.of(new DataGroupBatchIngest().name(dataGroupName)
             .description(dataGroupName)
             .externalServiceAgreementId(externalServiceAgreementId)
             .type(type)
-            .dataItems(dataItems);
+            .dataItems(items));
     }
 
-    public static Permission createPermission(String functionId, List<Privilege> privileges) {
-        return new Permission()
-            .functionId(functionId)
-            .assignedPrivileges(privileges);
-    }
-
-    private static FunctionsGetResponseBody detectBusinessFunction(String businessFunction,
-        List<FunctionsGetResponseBody> functions) {
+    private static PermissionItem detectBusinessFunction(String businessFunction,
+        List<PermissionItem> functions) {
         return functions
             .stream()
-            .filter(functionsGetResponseBody -> functionsGetResponseBody.getName().equals(businessFunction))
+            .filter(
+                functionsGetResponseBody -> functionsGetResponseBody.getBusinessFunctionName().equals(businessFunction))
             .findFirst()
             .orElseThrow(() -> new IllegalArgumentException("No matching business function for " + businessFunction));
     }
 
     public static List<Permission> createPermissionsForJobProfile(JobProfile jobProfile,
-        List<FunctionsGetResponseBody> functions) {
+        List<PermissionItem> functions) {
         List<Permission> permissions = new ArrayList<>();
 
         jobProfile.getPermissions().forEach(permission -> {
-            FunctionsGetResponseBody function = detectBusinessFunction(permission.getBusinessFunction(), functions);
+            PermissionItem function = detectBusinessFunction(permission.getBusinessFunction(), functions);
             permissions.add(
                 createPermissionForPrivileges(function, permission.getPrivileges(),
-                    function.getPrivileges()
-                        .stream()
-                        .map(IntegrationPrivilege::getPrivilege).collect(toList()))
+                    function.getPrivileges())
             );
         });
         return permissions;
     }
 
-    public static List<Permission> createPermissionsWithAllPrivileges(List<FunctionsGetResponseBody> functions) {
+    public static List<Permission> createPermissionsWithAllPrivileges(List<PermissionItem> functions) {
         return functions.stream()
             .map(AccessGroupsDataGenerator::createPermissionWithAllPrivileges)
-            .collect(toList());
+            .toList();
     }
 
-    private static Permission createPermissionWithAllPrivileges(FunctionsGetResponseBody function) {
-        List<IntegrationPrivilege> integrationPrivileges = function.getPrivileges();
-        List<Privilege> privileges = new ArrayList<>();
-
-        for (IntegrationPrivilege integrationPrivilege : integrationPrivileges) {
-            privileges.add(new Privilege().privilege(integrationPrivilege.getPrivilege()));
-        }
-
-        return createPermission(function.getFunctionId(), privileges);
+    private static Permission createPermissionWithAllPrivileges(PermissionItem function) {
+        return new Permission().businessFunctionName(function.getBusinessFunctionName())
+            .resourceName(function.getResourceName())
+            .privileges(function.getPrivileges());
     }
 
-    private static Permission createPermissionForPrivileges(FunctionsGetResponseBody function,
-        List<String> privilegeNames, List<String> validNames) {
-        List<Privilege> privileges = privilegeNames.stream()
-        .map(privilegeName -> {
-            if (validNames.contains(privilegeName)) {
-                return new Privilege().privilege(privilegeName);
-            } else {
-                throw new IllegalArgumentException(
-                    String.format("Business Function [%s] does not allow for privilege [%s] but allows: %s",
-                        function.getName(), privilegeName,
-                        function.getPrivileges().stream()
-                            .map(IntegrationPrivilege::getPrivilege)
-                            .collect(toList())));
-            }
-        }).collect(toList());
+    private static Permission createPermissionForPrivileges(PermissionItem function,
+        List<String> privilegeNames, Set<String> validNames) {
+        Set<String> privileges = privilegeNames.stream()
+            .map(privilegeName -> {
+                if (validNames.contains(privilegeName)) {
+                    return privilegeName;
+                } else {
+                    throw new IllegalArgumentException(
+                        String.format("Business Function [%s] does not allow for privilege [%s] but allows: %s",
+                            function.getBusinessFunctionName(), privilegeName, function.getPrivileges()));
+                }
+            }).collect(Collectors.toSet());
 
-        return createPermission(function.getFunctionId(), privileges);
+        return new Permission().businessFunctionName(function.getBusinessFunctionName())
+            .resourceName(function.getResourceName())
+            .privileges(privileges);
     }
 }
